--- a/src/public/main.css
+++ b/src/public/main.css
@@ -1,30 +1,42 @@
-html,body,#main,section {
-	width: 100%;
+html,body, #app, .main {
 	height: 100%;
-	overflow: hidden;
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
 }
-
-.bg {
+.main {
+	position: relative;
+}
+.main .main-bg {
 	position: absolute;
 	left: 0;
 	top: 0;
-	z-index: 8;
-	// background: url(./bg.jpg) no-repeat center center;
-	background-color: #ddd;
 	width: 100%;
 	height: 100%;
-	display: block;
-	-webkit-filter: blur(10px);
-	-moz-filter: blur(10px);
-	-ms-filter: blur(10px);
-	filter: blur(10px);
+	background: #edd;
+	z-index: 8;
+}
+.main .box{
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 10;
+    width: 100%;
+    display:flex;
+    justify-content:center;
+    // background: #0099cc;
+    flex-direction:column;
+    align-items:center;
+}
+.main .box .playerInfo,
+.main .box .playerProgress,
+.main .box .playerControl{
+    width: 100%;
+    display:flex;
+    justify-content:center;
 }
 
-.box {
-	position: absolute;
-	left: 0;
-	top: 0;
-	z-index: 10;
+.playerInfo .face {
+	border-radius: 50%;
+	width: 100%;
 }
