--- a/src/public/main.css
+++ b/src/public/main.css
@@ -16,7 +16,7 @@ html,body, #app, .main {
 	background: #edd;
 	z-index: 8;
 }
-.main .box{
+.main .box {
     position: absolute;
     left: 0;
     top: 0;
@@ -24,19 +24,50 @@ html,body, #app, .main {
     width: 100%;
     display:flex;
     justify-content:center;
-    // background: #0099cc;
+    background: #0099cc;
     flex-direction:column;
     align-items:center;
 }
 .main .box .playerInfo,
-.main .box .playerProgress,
-.main .box .playerControl{
+.main .box .playerControl {
     width: 100%;
     display:flex;
     justify-content:center;
 }
-
+.main .box .playerInfo {
+    flex-direction:column;
+    align-items:center;
+    font-size: 1rem;
+}
 .playerInfo .face {
+	text-align: center;
+	margin-top: 1rem;
 	border-radius: 50%;
-	width: 100%;
+	width: 5rem;
+	height: 5rem;
+	line-height: 5rem;
+	border: 3px solid #333;
+	background: #eee;
+}
+.playerInfo .name {
+	margin-top: 1.5rem;
+}
+.playerInfo .artist {
+	margin-top: 0.4rem;
+}
+.main .box .playerProgress {
+	background: #cfc;
+	width: 80%;
+	height: 0.5rem;
+	margin-top: 1rem;
+}
+.main .box .playerProgress span {
+	width: 80%;
+	background: #cdc;
+	display: block;
+	height: 0.5rem;
+}
+.playerControl {
+	margin-top: 3rem;
+	margin-bottom: 3rem;
 }
